--- a/src/index.css
+++ b/src/index.css
@@ -401,7 +401,7 @@ button:hover .filter-icon::before {
 }
 
 #host .card-container {
-  margin-bottom: 40px;
+  margin-bottom: 35px;
 }
 
 #pop .card {
